--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ actix-web = "4.11.0"
 anyhow = "1.0.98"
 chrono = { version = "0.4.41", features = ["serde"] }
 scylla = { version = "1.3.0", features = ["rustls-023"] }
+serde = { version = "1.0.219", features = ["derive"] }
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
