--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "backend"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+scylla = "0.11.1"  # Последняя стабильная версия
+chrono = { version = "0.4.41", features = ["serde"] }
+uuid = { version = "1.17.0", features = ["v4", "serde"] }
 actix-web = "4.11.0"
 anyhow = "1.0.98"
-chrono = { version = "0.4.41", features = ["serde"] }
-scylla = { version = "1.3.0", features = ["rustls-023"] }
-serde = { version = "1.0.219", features = ["derive"] }
-uuid = { version = "1.17.0", features = ["v4", "serde"] }
+serde = { version = "1.0", features = ["derive"] }
