--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 # Async runtime and utilities
 tokio = { version = "1.36", features = ["full"] }
 futures = "0.3.30"
+futures-util = "0.3.30"
 
 # Logging and metrics
 env_logger = "0.11.3"
@@ -31,8 +32,9 @@ utoipa = { version = "4.2.0", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
 
 # Tracing
-opentelemetry = { version = "0.22.0", features = ["trace", "metrics"] }
-opentelemetry-jaeger = "0.21.0"
+opentelemetry = "0.22.0"
+opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic"] }
 tracing = "0.1.40"
 tracing-opentelemetry = "0.23.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
