--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,23 +34,15 @@ services:
       --smp=2
       --memory=2G
       --overprovisioned=1
-      --api-address=0.0.0.0
-      --listen-address=0.0.0.0
-      --broadcast-address=scylla
-      --broadcast-rpc-address=scylla
       --developer-mode=1
-      --experimental=1
-      --log-level=info
-      --batch-size-warn-threshold=100KB
-      --batch-size-fail-threshold=1MB
     environment:
       - SCYLLA_DEVELOPMENT=1
-      - SCYLLA_EXPERIMENTAL=1
     volumes:
       - ./scylla-data:/var/lib/scylla
     ports:
       - "9042:9042"
       - "9160:9160"
+      - "10000:10000"  # API port
     networks:
       - forum-network
     deploy:
