--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -10,6 +10,11 @@ alerting:
 
 rule_files:
   - 'rules.yml'
+  - 'prom_rules/prometheus.rules.yml'
+  - 'prom_rules/prometheus.latency.rules.yml'
+  - 'prom_rules/prometheus.table.yml'
+  - 'prom_rules/back_fill/4.2/rules.1.yml'
+  - 'prom_rules/back_fill/3.8/rules.1.yml'
 
 scrape_configs:
   - job_name: 'prometheus'
@@ -24,6 +29,9 @@ scrape_configs:
   - job_name: 'scylla'
     static_configs:
       - targets: ['scylladb:9180']
+    metrics_path: '/metrics'
+    scrape_interval: 10s
+    scrape_timeout: 5s
 
   # Jaeger metrics - admin port (all-in-one mode)
   - job_name: 'jaeger'
