feat(load-test): integrate OpenTelemetry for distributed tracing in Locust tests
- Added OpenTelemetry configuration and tracing capabilities in locustfile.py.
- Enhanced HTTP request handling with tracing context propagation.
- Updated Dockerfile to install dependencies from requirements.txt.
- Created requirements.txt for managing Python dependencies.
- Improved error handling and logging for tracing spans.

feat(api): implement OpenTelemetry tracing in Actix-web application

- Introduced tracing middleware for extracting and propagating trace context.
- Enhanced telemetry initialization with composite propagators.
- Updated routes to include tracing instrumentation and improved logging.
- Added request and response tracing with detailed attributes.
- Improved error handling and logging in API endpoints.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,10 +93,16 @@ services:
       - ./load-test:/mnt/locust
     environment:
       - TARGET_HOST=http://app:8080
+      - JAEGER_OTLP_ENDPOINT=jaeger:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=jaeger:4317
+      - OTEL_SERVICE_NAME=locust-load-test
+      - OTEL_SERVICE_VERSION=1.0.0
+      - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=test
     networks:
       - forum-network
     depends_on:
       - app
+      - jaeger
 
   # Monitoring services
   prometheus:
