--- a/load-test/Dockerfile
+++ b/load-test/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.10-slim
 
 WORKDIR /mnt/locust
 
-RUN pip install --no-cache-dir locust
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8089
 
