--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,4 @@ opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic"] }
 tracing = "0.1.40"
 tracing-opentelemetry = "0.23.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+base64 = "0.22.1"
