--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,19 @@ tracing = "0.1.40"
 tracing-opentelemetry = "0.23.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 base64 = "0.22.1"
+
+# Profile configurations for better profiling
+[profile.release]
+debug = true  # Include debug symbols for profiling
+debug-assertions = false
+overflow-checks = false
+lto = false  # Disable LTO for better symbol resolution
+codegen-units = 1
+panic = "unwind"  # Better stack traces
+
+[profile.profiling]
+inherits = "release"
+debug = 2  # Full debug info
+lto = false
+codegen-units = 1
+incremental = false
