feat: костыль в эндпоинте /slow для чека мониторинга refactor: Refactor code structure for improved readability and maintainability

--- a/load-test/Dockerfile
+++ b/load-test/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8089
 
-ENTRYPOINT ["locust", "--host", "${TARGET_HOST}", "--web-host", "0.0.0.0"] 
+ENTRYPOINT ["locust", "--host", "http://app:8080", "--web-host", "0.0.0.0"] 
