--- a/monitoring/prometheus/rules.yml
+++ b/monitoring/prometheus/rules.yml
@@ -2,7 +2,7 @@ groups:
 - name: forum_api_alerts
   rules:
   - alert: HighP99Latency
-    expr: histogram_quantile(0.99, sum(rate(http_request_duration_seconds_bucket[5m])) by (le)) > 0.5
+    expr: histogram_quantile(0.99, sum by (le) (rate(forum_api_http_requests_duration_seconds_bucket[1m]))) > 0.5
     for: 1m
     labels:
       severity: warning
@@ -11,7 +11,7 @@ groups:
       description: "P99 API latency is above 500ms for more than 1 minute"
 
   - alert: HighDBRequestRate
-    expr: rate(db_requests_total[1m]) > 100
+    expr: sum(rate(forum_api_db_operations_total[1m])) > 100
     for: 1m
     labels:
       severity: warning
